# GraveBeat-Music

./: .gitignore  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_2.md  README.md  Test.session.sql  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  main.js  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  db.rs  discord.rs  entities.rs  lib.rs  main.rs  scan.rs  theaudiodb.rs
src-tauri/src/migrations/: 001_init.sql  002_add_artists_table.sql  003_add_favorites.sql  004_add_playlists.sql
src/components/: AddProfileModal.vue  ContextMenu.vue  NavigationBar.vue  PlayerControls.vue  Sidebar.vue  SongDetailsSidebar.vue  SongRow.vue
src/composables/: useLibrary.js  useTheme.js
src/pages/: Album.vue  AlbumSong.vue  ArtistDetails.vue  Artists.vue  Library.vue  Playlist.vue  RecentActivity.vue  Search.vue  Settings.vue  Test.vue  favorites.vue  files.vue
src/router/: index.js
src/store/: artists.js  player.js  settings.js  ui.js
src/utils/: lyricsSync.js
